--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="Viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Excursion</title>
-        <link rel="stylesheet" type="text/css" href="resources/CSS/stayl.css">
+        <link rel="stylesheet" type="text/css" href="resources/CSS/style.css">
 
     </head>
     <body>
