--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <video autoplay muted loop>
             <source src="resources/videos/excursion.mp4" type="video/mp4">
         </video>
+        <h2 class="head-second">Your Personal Travel Guidee</h2>
+        <h4 class="head-sub" >Excursion remembers places you like, and recommends new points of interest around you.</h4>
+        <p><img src="resources/image/camp.webp"></p>
+        <p><img src="resources/image/phone.webp"></p>
 
     </body>
 </html>
