--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <h4 class="head-sub" >Excursion remembers places you like, and recommends new points of interest around you.</h4>
         <p><img src="resources/image/camp.webp"></p>
         <p><img src="resources/image/phone.webp"></p>
+        <h2 class="head-second">Coming Soon for iPhone and Android</h2>
+        <p ><a class="link-cta" href="#">Download Excursion(Coming Soon!)</a></p>
 
     </body>
 </html>
